@@ -1,4 +1,4 @@
-		  GNU LIBRARY GENERAL PUBLIC LICENSE
+		  GNU LIBRARY GENERAL PUBLIC LICENSE 
 		       Version 2, June 1991
 
  Copyright (C) 1991 Free Software Foundation, Inc.
